hphp/test/slow/spec/tests/expressions/error_control_operator/error_control.php.expectf
int(-1)
int(-1)

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: y' in %s/error_control.php:12
Stack trace:
%A
